# provably

./: .gitignore  AWESOME_LISTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LAUNCH.md  PUBLISHING.md  README.md  SECURITY.md  action.yml  pyproject.toml  run_skill_leaderboard.py  test_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: comparisons.md
examples/: custom_skill_pack.yaml
examples/agent/: test_multistep.py
examples/basic/: test_hello.py
examples/datasets/: math_prompts.csv  safety_prompts.jsonl
examples/safety/: test_refusals.py
site/: cost-calculator.html  faq.html  how-it-works.html  index.html  leaderboard.html  quickstart.html  robots.txt  sitemap.xml  skills.html  terms.html  use-cases.html
site/blog/: ai-evaluation-cost.html  index.html  promptfoo-alternative.html  prove-ai-agent-skills.html  test-ai-agent-safety.html
src/proofagent/: __init__.py  badge.py  cli.py  compare.py  config.py  dashboard.py  datasets.py  display.py  expect.py  fixtures.py  judge.py  markers.py  optimize.py  plugin.py  report.py  result.py  skills.py
src/proofagent/providers/: __init__.py  anthropic.py  base.py  endpoint.py  gemini.py  ollama.py  openai.py
src/provably/: __init__.py  cli.py  compare.py  dashboard.py  datasets.py  expect.py  fixtures.py
src/provably/providers/: __init__.py  gemini.py
tests/: test_cli.py  test_compare.py  test_custom.py  test_datasets.py  test_expect.py  test_plugin.py  test_result.py
