[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofagent"
dynamic = ["version"]
description = "pytest for AI agents — test safety, accuracy, tool use, and cost"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "proofagent"}]
keywords = ["ai", "agents", "eval", "testing", "llm", "safety", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-genai>=1.0"]
ollama = ["requests>=2.20"]
yaml = ["pyyaml>=6.0"]
all = ["openai>=1.0", "anthropic>=0.30", "google-genai>=1.0", "requests>=2.20", "pyyaml>=6.0"]
dev = ["pytest>=8.0", "pytest-mock"]

[project.scripts]
proofagent = "proofagent.cli:cli"

[project.entry-points."pytest11"]
proofagent = "proofagent.plugin"

[project.urls]
Homepage = "https://github.com/camgitt/proofagent"
Documentation = "https://proofagent.dev"
Repository = "https://github.com/camgitt/proofagent"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.dynamic]
version = {attr = "proofagent.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
